--- a/MAUI.ChartingSystem/Views/Patients.xaml
+++ b/MAUI.ChartingSystem/Views/Patients.xaml
@@ -7,12 +7,15 @@
     <ScrollView>
         <VerticalStackLayout Padding="30" Spacing="25">
             <Label Text="Patients Menu" FontSize="36" Style="{StaticResource HeaderLabel}" />
+            <SearchBar
+                Placeholder="Enter Patient Name"
+                Text="{Binding PatientSearchText}"/>
             <Frame CornerRadius="10">
                 <StackLayout Spacing="24">
                     <Label Text="Patients List" FontSize="24" HorizontalOptions="Center"/>
                     <ListView
                         x:Name="PatientsListView"
-                        ItemsSource="{Binding Patients}">
+                        ItemsSource="{Binding FilteredPatients}">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
