--- a/MAUI.ChartingSystem/Views/Patients.xaml
+++ b/MAUI.ChartingSystem/Views/Patients.xaml
@@ -2,54 +2,67 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUI.ChartingSystem.Views.Patients"
-             Title="Patients"
-             NavigatedTo="ContentPage_NavigatedTo">
-    <ScrollView>
-        <VerticalStackLayout Padding="30" Spacing="25">
-            <Label Text="Patients Menu" FontSize="36" Style="{StaticResource HeaderLabel}" />
-            <SearchBar
-                Placeholder="Enter Patient Name"
-                Text="{Binding PatientSearchText}"/>
-            <Frame CornerRadius="10">
-                <StackLayout Spacing="24">
-                    <Label Text="Patients List" FontSize="24" HorizontalOptions="Center"/>
-                    <ListView
-                        x:Name="PatientsListView"
-                        ItemsSource="{Binding FilteredPatients}">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <ViewCell>
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="5*"/>
-                                            <ColumnDefinition/>
-                                        </Grid.ColumnDefinitions>
-                                        <Label Text="{Binding Display}" Grid.Column="0"/>
-                                        <Grid Grid.Column="1">
+             Title="Patients">
+    <Grid>
+        <ScrollView>
+            <VerticalStackLayout Padding="30" Spacing="25">
+                <Label Text="Patients Menu" FontSize="36" Style="{StaticResource HeaderLabel}" />
+                <SearchBar
+                    Placeholder="Enter Patient Name"
+                    Text="{Binding PatientSearchText}"/>
+                <Frame CornerRadius="10">
+                    <StackLayout Spacing="24">
+                        <Label Text="Patients List" FontSize="24" HorizontalOptions="Center"/>
+                        <ListView
+                            x:Name="PatientsListView"
+                            ItemsSource="{Binding FilteredPatients}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <ViewCell>
+                                        <Grid>
                                             <Grid.ColumnDefinitions>
-                                                <ColumnDefinition/>
+                                                <ColumnDefinition Width="5*"/>
                                                 <ColumnDefinition/>
                                             </Grid.ColumnDefinitions>
-                                            <Button Command="{Binding BindingContext.EditPatientCommand, Source={x:Reference Name=PatientsListView}}"
-                                                    CommandParameter="{Binding .}" Text="Edit" Grid.Column="0" Style="{StaticResource SecondaryButton}"/>
-                                            <Button Command="{Binding BindingContext.DeletePatientCommand, Source={x:Reference Name=PatientsListView}}"
-                                                    CommandParameter="{Binding .}" Text="Delete" Grid.Column="1" Style="{StaticResource PrimaryButton}"/>
+                                            <Label Text="{Binding Display}" Grid.Column="0"/>
+                                            <Grid Grid.Column="1">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition/>
+                                                    <ColumnDefinition/>
+                                                </Grid.ColumnDefinitions>
+                                                <Button Command="{Binding BindingContext.EditPatientCommand, Source={x:Reference Name=PatientsListView}}"
+                                                        CommandParameter="{Binding .}" Text="Edit" Grid.Column="0" Style="{StaticResource SecondaryButton}"/>
+                                                <Button Command="{Binding BindingContext.DeletePatientCommand, Source={x:Reference Name=PatientsListView}}"
+                                                        CommandParameter="{Binding .}" Text="Delete" Grid.Column="1" Style="{StaticResource PrimaryButton}"/>
+                                            </Grid>
                                         </Grid>
-                                    </Grid>
-                                </ViewCell>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </StackLayout>
-            </Frame>
-            <Grid ColumnSpacing="50">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="2*"/>
-                </Grid.ColumnDefinitions>
-                <Button Text="Back" Clicked="BackClicked" Grid.Column="0" Style="{StaticResource SecondaryButton}"/>
-                <Button Text="Add" Clicked="AddClicked" Grid.Column="1" Style="{StaticResource PrimaryButton}"/>
-            </Grid>
-        </VerticalStackLayout>
-    </ScrollView>
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackLayout>
+                </Frame>
+                <Grid ColumnSpacing="50">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="2*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Text="Back" Clicked="BackClicked" Grid.Column="0" Style="{StaticResource SecondaryButton}"/>
+                    <Button Text="Add" Clicked="AddClicked" Grid.Column="1" Style="{StaticResource PrimaryButton}"/>
+                </Grid>
+            </VerticalStackLayout>
+        </ScrollView>
+
+        <!-- Overlay loading indicator -->
+        <Grid BackgroundColor="#80000000"
+              IsVisible="{Binding IsBusy}">
+            <ActivityIndicator IsRunning="{Binding IsBusy}"
+                               IsVisible="{Binding IsBusy}"
+                               Color="DodgerBlue"
+                               VerticalOptions="Center"
+                               HorizontalOptions="Center"
+                               WidthRequest="48"
+                               HeightRequest="48"/>
+        </Grid>
+    </Grid>
 </ContentPage>
